--- a/Lesson34/Practice1_m9_1/Practice1_m9_1.vcxproj
+++ b/Lesson34/Practice1_m9_1/Practice1_m9_1.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{CA0B66CF-667A-4B88-B9A4-CE753BB236E8}</ProjectGuid>
+    <ProjectGuid>{1DEF6843-23B5-4DD3-BAA9-B4612FB24F13}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Practice_m9_2</RootNamespace>
-    <ProjectName>Practice_m9_2</ProjectName>
+    <RootNamespace>Practice1_m9_1</RootNamespace>
+    <ProjectName>Practice1_m9_1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
